<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?attr/selectableItemBackground"
    android:background="@color/whiter"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_title_book"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_medium"
            android:maxLines="2"
            android:text="@string/book_title"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/img_book"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_author_book"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/authors_name"
            app:layout_constraintEnd_toEndOf="@+id/tv_title_book"
            app:layout_constraintStart_toStartOf="@+id/tv_title_book"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_book" />

        <TextView
            android:id="@+id/tv_categories"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/categories"
            app:layout_constraintEnd_toEndOf="@+id/tv_author_book"
            app:layout_constraintStart_toStartOf="@+id/tv_author_book"
            app:layout_constraintTop_toBottomOf="@+id/tv_author_book" />

        <ImageView
            android:id="@+id/img_book"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:contentDescription="@string/image_book"
            android:scaleType="centerCrop"
            android:src="@drawable/book_placeholder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>